Fix for NavBar issue. Now links to above content. Additionally, fix image format on smaller resolutions.

--- a/css/main.css
+++ b/css/main.css
@@ -45,10 +45,8 @@ figure {
 
 img {
     display: inline;
-    width: 32%;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 1%;
+    width: 30%;
+    padding-left: 2%;
 }
 
 footer {
